# signing-app

./: .gitignore  Cargo.toml  README.md
client/: main.rs
core-modules/pki/: Cargo.toml
core-modules/signing/: Cargo.toml
core-modules/signing/client/: main.rs
core-modules/signing/server/: app.rs
core-modules/template/: Cargo.toml
core-modules/template/client/: main.rs
core-modules/template/rust_app/: app.rs
platform/core/: Cargo.toml
server/: app.rs
