[package]
name = "pki"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
dtrust = { path = "../../platform/core" }
tokio = { version = "1.13", features = ["full"] }

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "example_app"
path = "server/main.rs"
