[package]
name = "signing"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
curv-kzen = "0.9.0"
dtrust = { path = "../../platform/core" }
libdots = "0.2.0"
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git", version = "0.8.1" }
round-based = "0.1.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.22.0", features = ["full"] }

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "rust_app"
path = "server/app.rs"

[profile.release]
opt-level = 2
