[package]
name = "template"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
dtrust = { path = "../../platform/core" }
libdots = "0.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1.13", features = ["full"] }

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "rust_app"
path = "rust_app/app.rs"
