[package]
name = "dtrust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotspb = "0.4.0"
futures = "0.3.28"
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["fs"] }
tonic = { version = "0.9.2", features = ["tls"] }
uuid = { version = "1.3.1", features = ["v4"] }
